[package]
name = "redsystem"
version = "0.1.0"
authors = ["setr <nokhand@gmail.com>"]
description = "Static blog generator with cyclical digraph structure"

[dependencies]
petgraph = "0.4.13"
quick-error = "1.2.2"
serde = "1.0.79"
serde_derive = "1.0.79"
toml = "0.4.8"
error-chain = "0.12.0"
pulldown-cmark = { version = "0.1.2", default-features = false }
tera = "0.11.16"
symlink = "0.1.0"
indicatif = "0.9.0"
console = "0.6.2"
simplelog = "0.5.2"
log = "0.4.5"
clap = "2.32.0"
dialoguer = "0.1.0"

# webserver
iron = "0.6.0"
staticfile = "0.5.0"
mount = "0.4.0"
